# matthunder

./: .gitignore  BOT_RUN_GUIDE.md  Cargo.toml  HOW_TO_RUN.md  LOCAL_SETUP.md  README.md  README_SHARE_READY.txt  TODO.md  UPGRADE.md  __test_routes.py  _v.py  ai_guard.py  ai_parser.py  config.example.py  config.py  deep_full.py  docker-compose.yml  file_list.txt  matthunder.py  matthunder_banner.py  matthunder_cli.py  oushh.py  report_gen.py  requirements.txt  requirements_bot.txt  run_bot.bat  run_bot_hidden.vbs  run_deep_bot.bat  run_deep_bot.sh  setup.bat  setup.sh  spawn_bot.py  start_all.bat  telegram_deep_bot.py  user_config.py
backend/: .env.example  Dockerfile  alembic.ini  create_superadmin.py  matthunder_context.md  requirements-local.txt  requirements.txt  start_backend.bat
bot/: Dockerfile  requirements.txt
cli/: pyproject.toml  requirements.txt
cli/matthunder_cli/: __init__.py  main.py
docs/: api-reference.md  architecture.md
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  playwright.config.ts  start_frontend.bat
matthunder_core/: __init__.py  registry.py  scope.py  service.py
nuclei/: nuc_active_espressif.com.txt  nuc_active_gorontalokota.go.id.txt  nuc_active_itbox.id.txt  nuc_active_jogjaprov.go.id.txt  nuc_active_tangerangselatankota.go.id.txt  nuc_exp_komdigi.go.id.txt
public-bug-bounty-program/: bugbase_bounty.txt  bugcrowd_bounty.txt  bugcrowd_swag_vdp.txt  bugv_bounty.txt  hackenproof_bounty.txt  hackerone_bounty.txt  hackerone_swag_vdp.txt  immunefi_bounty.txt  intigriti_bounty.txt  intigriti_swag_vdp.txt  (+3 more)
(+171 files in other folders)
