[project]
name = "matthunder-cli"
version = "2.0.0"
description = "Modern CLI for matthunder bug hunting platform"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
matthunder = "matthunder_cli.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
